[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MontgomeryReductionAlgorithm"]

[project]
name = "Montgomery-Reduction-Algorithm"
version = "0.0.5-beta"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Andreas W. Weber", email = "andreas.willibald.weber@gmail.com"},
]
maintainers = [
  {name = "Andreas W. Weber", email = "andreas.willibald.weber@gmail.com"},
]
description = "Montgomery Reduction Algorithm python package to verify and study hardware implementations."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Montgomery", "reduction", "algorithm", "multiplication", "exponentiation", "hardware", "study", "research"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/AndreasWillibaldWeber/Montgomery-Reduction-Algorithm"
Homepage = "https://github.com/AndreasWillibaldWeber/Montgomery-Reduction-Algorithm/issues"
Documentation = "https://github.com/AndreasWillibaldWeber/Montgomery-Reduction-Algorithm"
Repository = "https://github.com/AndreasWillibaldWeber/Montgomery-Reduction-Algorithm"

[project.scripts]
mra-cli = "MontgomeryReductionAlgorithm.cli:main"
mra-gui = "MontgomeryReductionAlgorithm.gui:main"
